# NexQuantSite

./: .gitignore  99PLUS_BUG_HUNT_COMPLETE.md  AUDIT_REPORT.json  AUDIT_SUMMARY_99PLUS.md  AUTH_FULLY_WORKING.md  BACKTESTING_98_PLUS_TRANSFORMATION.md  BUG_HUNT_RCA_COMPLETE.md  COMPREHENSIVE_99PLUS_AUDIT_REPORT.md  COMPREHENSIVE_BUG_REPORT.md  COMPREHENSIVE_TEST_RESULTS.md  CRITICAL_AUDIT_FINDINGS.md  CRITICAL_FIX_REPORT.md  CRITICAL_IMPLEMENTATION_ROADMAP.md  CRITICAL_SECURITY_AUDIT_REPORT.md  EMAIL_SYSTEM_SHOWCASE.md  FINAL_99PLUS_ACHIEVEMENT_REPORT.md  FINAL_99_SAAS_REPORT.md  FINAL_AUTH_STATUS.md  FINAL_COMPREHENSIVE_AUDIT_REPORT.md  FINAL_STATUS_LIVE_READY.md  FOCUSED_LAYOUT_COMPLETE.md  GO_LIVE_CHECKLIST.md  IMPLEMENTATION_SUCCESS_GUIDE.md  NEXURAL_IO_SETUP_COMPLETE.md  PHASE1_COMPLETION_REPORT.md  PRODUCTION_READY_PHASES.md  PRODUCTION_READY_STATUS.md  PRODUCTION_SECURITY_GUIDE.md  PROFESSIONAL_CODEBASE_SUMMARY.md  PROFESSIONAL_LEGAL_PROTECTION.md  PROJECT_CLEANUP_REPORT.md  README.md  SAAS_99_CHECKLIST.md  SECURITY_SCAN_REPORT.json  TESTING_DASHBOARD_AUDIT_REPORT.md  TESTING_ENGINE_INTEGRATION_COMPLETE.md  TESTING_ENGINE_SCORECARD_99_PLUS.md  UI_ENHANCEMENTS_IMPLEMENTATION.md  api-endpoint-tester.js  audit-results.json  (+19 more)
nexural-backtesting-2/: .gitignore  AI_ENSEMBLE_EXPLANATION.md  BYOK_BUSINESS_STRATEGY.md  BYOK_INTEGRATION_GUIDE.md  BYOK_SECURITY_AUDIT_COMPLETE.md  BYOK_UI_INTEGRATION_COMPLETE.md  CHANGELOG.md  COMPLETE_BUSINESS_ANALYSIS.md  COMPLETE_SYSTEM_SUMMARY.md  COMPLETE_USAGE_GUIDE.md  COMPREHENSIVE_PLATFORM_AUDIT_2024.md  ELITE_OPTIMIZATION_COMPLETE_A_C_D.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_PROJECT_ORGANIZATION.md  FINAL_SYSTEM_ASSESSMENT.md  FRONTEND_INTEGRATION_GUIDE.md  HONEST_AI_SCORECARD.md  HONEST_PROGRESS_AUDIT_OCH.md  HOW_YOUR_AI_ENSEMBLE_WORKS.md  LICENSE  NEXURAL_PLATFORM_SUCCESS_WORKING.md  NEXURAL_TESTING_PRIORITY.md  OCHCLOUD_DEPLOYMENT_READY.md  OPTIMAL_PRICING_STRATEGY.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_DEPLOYMENT_COMPLETE.md  PHASE2_DEPLOYMENT_COMPLETE.md  PHASE3_DEPLOYMENT_COMPLETE.md  PLATFORM_SUMMARY.md  PLATFORM_TESTING_GUIDE.md  PRICING_FAIRNESS_ANALYSIS.md  PRODUCTION_DEPLOYMENT_ROADMAP.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  SECURITY_FIXED_SUMMARY.md  SETUP_REAL_AI.md  TIER1_TESTING_SUCCESS_100_PERCENT.md  TIER2_EXPERT_TESTING_COMPLETE_82_PERCENT.md  ULTIMATE_95_AI_ROADMAP.md  (+55 more)
nexural-backtesting-2/.github/workflows/: ci.yml  docs.yml
nexural-backtesting-2/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
nexural-backtesting-2/catboost_info/learn/: events.out.tfevents
nexural-backtesting-2/docs/: architecture.md
nexural-backtesting-2/examples/: advanced_features.py  basic_backtest.py  interactive_dashboard.py
nexural-backtesting-2/infrastructure/: deploy-phase1-simple.ps1  deploy-phase1-windows.ps1  deploy-phase1.sh
nexural-backtesting-2/infrastructure/api-gateway/: kong-gateway.yaml
nexural-backtesting-2/infrastructure/database/: postgresql-cluster.yaml
nexural-backtesting-2/infrastructure/disaster-recovery/: backup-and-recovery.ts
nexural-backtesting-2/infrastructure/kubernetes/: production-deployment.yaml
nexural-backtesting-2/infrastructure/ochcloud/: Dockerfile  Dockerfile.local  Dockerfile.worker  Dockerfile.worker.local  deploy-ochcloud.sh  docker-compose.local.yml  docker-compose.production.yml  env.local  start-local-preview.ps1  start-local-preview.sh
nexural-backtesting-2/nexural_backtesting/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  debug_ai_scoring.py  debug_data_processing.py  docker-compose.yml  env.example  gap_analysis.py  performance_optimization.py  phase2_final_validation.py  pyproject.toml  setup_ai_apis.py  test_advanced_ai.py  test_advanced_strategies.py  validate_performance.py  working_integration_test.py  world_class_integration.py  world_class_validation.py
nexural-backtesting-2/nexural_backtesting/advanced/: robust_feature_processor.py
nexural-backtesting-2/nexural_backtesting/analytics/: performance_attribution.py  strategy_evaluator.py
nexural-backtesting-2/nexural_backtesting/config/: config.yaml  symbols.yaml
nexural-backtesting-2/nexural_backtesting/database/: trading_database.py
nexural-backtesting-2/nexural_backtesting/deploy/: Dockerfile  docker-compose.yml  kubernetes.yaml  production_deployment.py
nexural-backtesting-2/nexural_backtesting/docs/: API_REFERENCE.md  API_SETUP_GUIDE.md  CRITICAL_IMPLEMENTATION_ROADMAP.md  DATABENTO_SETUP.md  DEVELOPMENT_GUIDE.md  ENTERPRISE_IMPLEMENTATION_COMPLETE.md  FUTURE_PROOF_ARCHITECTURE.md  IMMEDIATE_FUTURE_PROOF_STEPS.md  MODERN_UI_README.md  MODULAR_ARCHITECTURE_BLUEPRINT.md  MODULAR_IMPLEMENTATION_GUIDE.md  NINJATRADER_INTEGRATION_GUIDE.md  ORGANIZATION_COMPLETE.md  ORGANIZATION_SCORECARD.md  PHASE1_IMPLEMENTATION_GUIDE.md  PHASE1_ULTRA_ACCURATE_DATA_ENGINE_COMPLETE.md  PHASE2_ADVANCED_TESTING_FRAMEWORK_COMPLETE.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_DEPLOYMENT_MONITORING.md  PHASE3_PLUMBING_COMPLETE.md  PLATFORM_ANALYSIS.md  PRODUCTION_PHASES_GUIDE.md  PROJECT_ORGANIZATION.md  PROJECT_STATUS_REPORT.md  PROJECT_STRUCTURE.md  QUANTCONNECT_FREE_SETUP.md  QUANTCONNECT_SETUP.md  QUICK_START_GUIDE.md  README_DESKTOP_APP.md  TERMINAL_INTEGRATION_SYSTEM.md  UI_DEVELOPMENT_ROADMAP.md
nexural-backtesting-2/nexural_backtesting/engines/: advanced_backtest_engine.py  reliable_backtest_engine.py
nexural-backtesting-2/nexural_backtesting/examples/: ai_strategy_analysis.py  basic_backtest.py
nexural-backtesting-2/nexural_backtesting/execution/: disaster_recovery.py  transaction_cost_model.py
nexural-backtesting-2/nexural_backtesting/experimentation/: ab_testing.py
nexural-backtesting-2/nexural_backtesting/ml/: regime_detection.py
nexural-backtesting-2/nexural_backtesting/monitoring/: alert_system.py
nexural-backtesting-2/nexus-99-quantum-backend/: requirements.txt  start_all_services.py
nexural-backtesting-2/scripts/: benchmark.py  setup.py
nexural-backtesting-2/tests/: run_institutional_tests.py
(+1492 files in other folders)
